fix: fix logo when using dark mode

--- a/docs/style.css
+++ b/docs/style.css
@@ -8,56 +8,11 @@ body {
     'calt' 1;
 }
 
-.home-content p {
-  margin-top: 1.5em;
-  line-height: 1.75em;
-}
-
-.home-content a {
-  --tw-ring-color: hsl(
-    var(--nextra-primary-hue) var(--nextra-primary-saturation) 50%/0.3
-  );
-  --tw-text-opacity: 1;
-  text-underline-position: under;
-  text-decoration-line: underline;
-  text-decoration-thickness: from-font;
-  color: hsl(
-    var(--nextra-primary-hue) var(--nextra-primary-saturation) 50% /
-      var(--tw-text-opacity)
-  );
-}
-
-figcaption {
-  font-size: 0.85rem;
-  line-height: 1.5rem;
-  display: block;
-  text-align: center;
-  margin-top: 0.5rem;
-}
-
-code.text-\[\.9em\] {
-  font-size: 14px;
-}
-
-@media screen and (max-width: 1200px) {
-  .home-content .hide-medium {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 720px) {
-  .home-content p {
-    font-size: 0.9rem;
-  }
-  .home-content .hide-small {
-    display: none;
-  }
-}
 .logo {
   fill: #020D37;
 }
 @media (prefers-color-scheme: dark) {
-  .logo {
+  .dark .logo {
     fill: #FFFFFF; /* Change this to the desired color for dark mode */
   }
 }
